# api/app/Models/Auth.php
@@ -39,18 +39,10 @@ use OpenApi\Attributes as OA;
 
 #[OA\Schema(
     schema: "AuthResponse200",
-    required: ["token", "role"],
+    type: "object",
     properties: [
-        new OA\Property(
-            property: "token",
-            type: "string",
-            description: "The token for the user"
-        ),
-        new OA\Property(
-            property: "role",
-            type: "string",
-            description: "The role of the user"
-        )
+        new OA\Property(property: "success", type: "boolean", example: true),
+        new OA\Property(property: "data", ref: "#/components/schemas/Auth")
     ]
 )]
 class Auth {}
