# api/public/openapi.json
@@ -1186,18 +1186,13 @@
                 "type": "object"
             },
             "AuthResponse200": {
-                "required": [
-                    "token",
-                    "role"
-                ],
                 "properties": {
-                    "token": {
-                        "description": "The token for the user",
-                        "type": "string"
+                    "success": {
+                        "type": "boolean",
+                        "example": true
                     },
-                    "role": {
-                        "description": "The role of the user",
-                        "type": "string"
+                    "data": {
+                        "$ref": "#\/components\/schemas\/Auth"
                     }
                 },
                 "type": "object"
